; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_alloc.c_alloc_clear_special.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_alloc.c_alloc_clear_special.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.alloc_cache = type { i32, i32, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @alloc_clear_special(%struct.alloc_cache* %0) #0 {
  %2 = alloca %struct.alloc_cache*, align 8
  store %struct.alloc_cache* %0, %struct.alloc_cache** %2, align 8
  %3 = load %struct.alloc_cache*, %struct.alloc_cache** %2, align 8
  %4 = getelementptr inbounds %struct.alloc_cache, %struct.alloc_cache* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %11, label %7

7:                                                ; preds = %1
  %8 = load %struct.alloc_cache*, %struct.alloc_cache** %2, align 8
  %9 = getelementptr inbounds %struct.alloc_cache, %struct.alloc_cache* %8, i32 0, i32 0
  %10 = call i32 @lock_quick_lock(i32* %9)
  br label %11

11:                                               ; preds = %7, %1
  %12 = load %struct.alloc_cache*, %struct.alloc_cache** %2, align 8
  %13 = call i32 @alloc_clear_special_list(%struct.alloc_cache* %12)
  %14 = load %struct.alloc_cache*, %struct.alloc_cache** %2, align 8
  %15 = getelementptr inbounds %struct.alloc_cache, %struct.alloc_cache* %14, i32 0, i32 3
  store i64 0, i64* %15, align 8
  %16 = load %struct.alloc_cache*, %struct.alloc_cache** %2, align 8
  %17 = getelementptr inbounds %struct.alloc_cache, %struct.alloc_cache* %16, i32 0, i32 2
  store i64 0, i64* %17, align 8
  %18 = load %struct.alloc_cache*, %struct.alloc_cache** %2, align 8
  %19 = getelementptr inbounds %struct.alloc_cache, %struct.alloc_cache* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %26, label %22

22:                                               ; preds = %11
  %23 = load %struct.alloc_cache*, %struct.alloc_cache** %2, align 8
  %24 = getelementptr inbounds %struct.alloc_cache, %struct.alloc_cache* %23, i32 0, i32 0
  %25 = call i32 @lock_quick_unlock(i32* %24)
  br label %26

26:                                               ; preds = %22, %11
  ret void
}

declare dso_local i32 @lock_quick_lock(i32*) #1

declare dso_local i32 @alloc_clear_special_list(%struct.alloc_cache*) #1

declare dso_local i32 @lock_quick_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
